--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -116,6 +116,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallpaper" translatesAutoresizingMaskIntoConstraints="NO" id="1nb-Cu-xCm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L4M-ik-dsL" customClass="MDCTextField">
                                 <rect key="frame" x="48" y="100" width="279" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -151,15 +154,19 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Gar-jY-bIU" firstAttribute="top" secondItem="oUe-dt-4Jc" secondAttribute="bottom" constant="32" id="0c9-Cm-dbw"/>
+                            <constraint firstAttribute="trailing" secondItem="1nb-Cu-xCm" secondAttribute="trailing" id="2M2-po-mIR"/>
                             <constraint firstItem="L4M-ik-dsL" firstAttribute="leading" secondItem="eoY-QB-Tk7" secondAttribute="leadingMargin" constant="32" id="HFR-er-7El"/>
+                            <constraint firstAttribute="bottom" secondItem="1nb-Cu-xCm" secondAttribute="bottom" id="KXW-p6-FZ2"/>
                             <constraint firstItem="Gar-jY-bIU" firstAttribute="leading" secondItem="eoY-QB-Tk7" secondAttribute="leadingMargin" constant="16" id="LXe-8c-LF5"/>
                             <constraint firstItem="edt-DS-dsI" firstAttribute="centerY" secondItem="oUe-dt-4Jc" secondAttribute="centerY" id="N3m-H8-ZMU"/>
                             <constraint firstItem="oUe-dt-4Jc" firstAttribute="top" secondItem="L4M-ik-dsL" secondAttribute="bottom" constant="8" id="NWF-DP-7nW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="L4M-ik-dsL" secondAttribute="trailing" constant="32" id="NmB-fy-sbf"/>
+                            <constraint firstItem="1nb-Cu-xCm" firstAttribute="top" secondItem="eoY-QB-Tk7" secondAttribute="top" id="VFo-nw-6gA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Gar-jY-bIU" secondAttribute="trailing" constant="16" id="XSA-hD-e0o"/>
                             <constraint firstItem="oUe-dt-4Jc" firstAttribute="leading" secondItem="eoY-QB-Tk7" secondAttribute="leadingMargin" constant="32" id="ZpL-0c-07I"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oUe-dt-4Jc" secondAttribute="trailing" constant="32" id="gCc-mG-aAS"/>
                             <constraint firstItem="edt-DS-dsI" firstAttribute="leading" secondItem="oUe-dt-4Jc" secondAttribute="trailing" constant="4" id="oYs-wl-XWd"/>
+                            <constraint firstItem="1nb-Cu-xCm" firstAttribute="leading" secondItem="eoY-QB-Tk7" secondAttribute="leading" id="vNw-6f-15s"/>
                             <constraint firstItem="L4M-ik-dsL" firstAttribute="top" secondItem="KIO-cs-09l" secondAttribute="bottom" constant="80" id="yVO-vs-mpc"/>
                         </constraints>
                     </view>
@@ -200,7 +207,7 @@
                                             <rect key="frame" x="16" y="16" width="343" height="422"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HtA-qf-Q0j">
-                                                    <rect key="frame" x="16" y="8" width="243" height="95"/>
+                                                    <rect key="frame" x="16" y="8" width="243" height="94.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAb-oz-vwE">
                                                             <rect key="frame" x="0.0" y="0.0" width="243" height="14.5"/>
@@ -209,10 +216,10 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sxK-5L-NNW" customClass="BCHDWBannerView">
-                                                            <rect key="frame" x="0.0" y="22.5" width="243" height="50"/>
+                                                            <rect key="frame" x="0.0" y="22.5" width="243" height="49.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsj-V2-L7g">
-                                                                    <rect key="frame" x="8" y="8" width="227" height="34"/>
+                                                                    <rect key="frame" x="8" y="8" width="227" height="33.5"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -227,13 +234,13 @@
                                                             </constraints>
                                                         </view>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="lbt-cN-p1W">
-                                                            <rect key="frame" x="0.0" y="80.5" width="243" height="14.5"/>
+                                                            <rect key="frame" x="0.0" y="80" width="243" height="14.5"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="lock-icon" translatesAutoresizingMaskIntoConstraints="NO" id="bqb-2g-4t0">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="16" height="14.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="18" height="14.5"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0q-Bk-439">
-                                                                    <rect key="frame" x="20" y="0.0" width="223" height="14.5"/>
+                                                                    <rect key="frame" x="22" y="0.0" width="221" height="14.5"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -243,7 +250,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="28G-Ee-Cnn">
-                                                    <rect key="frame" x="16" y="111" width="311" height="303"/>
+                                                    <rect key="frame" x="16" y="110.5" width="311" height="303.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9o9-2L-yDd">
                                                             <rect key="frame" x="0.0" y="0.0" width="311" height="20.5"/>
@@ -252,19 +259,19 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-icon" translatesAutoresizingMaskIntoConstraints="NO" id="oRq-bk-kfa">
-                                                            <rect key="frame" x="0.0" y="36.5" width="311" height="199.5"/>
+                                                            <rect key="frame" x="0.0" y="36.5" width="311" height="200"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" priority="750" constant="200" id="j0p-C4-ImN"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDJ-1m-i0Z">
-                                                            <rect key="frame" x="0.0" y="252" width="311" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="252.5" width="311" height="20.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFk-K5-XdF">
-                                                            <rect key="frame" x="0.0" y="288.5" width="311" height="14.5"/>
+                                                            <rect key="frame" x="0.0" y="289" width="311" height="14.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -613,6 +620,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallpaper" translatesAutoresizingMaskIntoConstraints="NO" id="tut-Vl-fkX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hi5-Wb-z6f">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
@@ -684,7 +694,11 @@
                         <constraints>
                             <constraint firstItem="Hi5-Wb-z6f" firstAttribute="leading" secondItem="WIh-Um-jai" secondAttribute="leading" id="56s-XO-eva"/>
                             <constraint firstItem="gG0-bQ-0MT" firstAttribute="width" secondItem="WIh-Um-jai" secondAttribute="width" id="6gP-Fq-b8f"/>
+                            <constraint firstAttribute="trailing" secondItem="tut-Vl-fkX" secondAttribute="trailing" id="7wF-gB-iho"/>
+                            <constraint firstAttribute="bottom" secondItem="tut-Vl-fkX" secondAttribute="bottom" id="IdI-Zj-XgE"/>
+                            <constraint firstItem="tut-Vl-fkX" firstAttribute="top" secondItem="Gt9-hk-Tmc" secondAttribute="bottom" id="QLx-FB-uFb"/>
                             <constraint firstAttribute="trailing" secondItem="Hi5-Wb-z6f" secondAttribute="trailing" id="Qow-CB-7Mn"/>
+                            <constraint firstItem="tut-Vl-fkX" firstAttribute="leading" secondItem="WIh-Um-jai" secondAttribute="leading" id="fDD-mx-56x"/>
                             <constraint firstItem="Hi5-Wb-z6f" firstAttribute="top" secondItem="Gt9-hk-Tmc" secondAttribute="bottom" id="sfa-qr-sue"/>
                             <constraint firstItem="4YN-kO-itF" firstAttribute="top" secondItem="Hi5-Wb-z6f" secondAttribute="bottom" id="uoL-i1-ar4"/>
                         </constraints>
@@ -980,12 +994,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G9i-Ig-rdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2129" y="31"/>
+            <point key="canvasLocation" x="2128.8000000000002" y="30.134932533733135"/>
         </scene>
     </scenes>
     <resources>
         <image name="image-icon" width="375" height="300"/>
         <image name="lock-icon" width="18" height="18"/>
         <image name="onepassword-login-button" width="41" height="41"/>
+        <image name="wallpaper" width="360" height="640"/>
     </resources>
 </document>
