--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -560,32 +560,73 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="textBlockCell" id="yoW-PP-wIX" customClass="BCHDWTextBlockTableViewCell">
-                                <rect key="frame" x="0.0" y="305.5" width="375" height="33"/>
+                                <rect key="frame" x="0.0" y="305.5" width="375" height="30.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yoW-PP-wIX" id="nYg-h4-1ol">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="33"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="30.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xjv-Dz-8gk" customClass="BCHDWHyperlinkLabel">
-                                            <rect key="frame" x="16" y="8" width="343" height="17"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMk-8l-ZYm" customClass="BCHDWHyperlinkLabel">
+                                            <rect key="frame" x="16" y="5" width="349" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Xjv-Dz-8gk" firstAttribute="leading" secondItem="nYg-h4-1ol" secondAttribute="leading" constant="16" id="Eav-If-yEN"/>
-                                        <constraint firstItem="Xjv-Dz-8gk" firstAttribute="top" secondItem="nYg-h4-1ol" secondAttribute="top" constant="8" id="Ybu-hS-QwK"/>
-                                        <constraint firstAttribute="bottom" secondItem="Xjv-Dz-8gk" secondAttribute="bottom" constant="8" id="fh9-Jv-9CU"/>
-                                        <constraint firstAttribute="trailing" secondItem="Xjv-Dz-8gk" secondAttribute="trailing" constant="16" id="kaE-iS-aJn"/>
+                                        <constraint firstAttribute="trailing" secondItem="bMk-8l-ZYm" secondAttribute="trailing" constant="10" id="RdG-e7-agM"/>
+                                        <constraint firstItem="bMk-8l-ZYm" firstAttribute="top" secondItem="nYg-h4-1ol" secondAttribute="top" constant="5" id="UMa-EO-dAm"/>
+                                        <constraint firstAttribute="bottom" secondItem="bMk-8l-ZYm" secondAttribute="bottom" constant="5" id="ct7-mR-oUq"/>
+                                        <constraint firstItem="bMk-8l-ZYm" firstAttribute="leading" secondItem="nYg-h4-1ol" secondAttribute="leading" constant="16" id="m9H-h0-fl8"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="bodyLabel" destination="Xjv-Dz-8gk" id="2yJ-sn-y2N"/>
+                                    <outlet property="bodyLabel" destination="bMk-8l-ZYm" id="Hhl-6M-LhB"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="likedCell" id="Y1q-RU-TMg" customClass="BCHDWEntryLikedTableCell">
+                                <rect key="frame" x="0.0" y="336" width="375" height="40"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y1q-RU-TMg" id="au5-g8-qyG">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart-selected" translatesAutoresizingMaskIntoConstraints="NO" id="klQ-Bo-VZt">
+                                            <rect key="frame" x="16" y="2" width="36" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="klQ-Bo-VZt" secondAttribute="height" multiplier="1:1" id="J2U-WI-kNZ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9a7-as-qdm">
+                                            <rect key="frame" x="62" y="2" width="28.5" height="13.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9JG-vI-jKQ">
+                                            <rect key="frame" x="62" y="16.5" width="28.5" height="13.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="klQ-Bo-VZt" firstAttribute="leading" secondItem="au5-g8-qyG" secondAttribute="leading" constant="16" id="00A-Km-Qdq"/>
+                                        <constraint firstItem="9a7-as-qdm" firstAttribute="leading" secondItem="klQ-Bo-VZt" secondAttribute="trailing" constant="10" id="83d-PR-7RT"/>
+                                        <constraint firstItem="9JG-vI-jKQ" firstAttribute="leading" secondItem="9a7-as-qdm" secondAttribute="leading" id="9QS-gA-Gjx"/>
+                                        <constraint firstAttribute="bottom" secondItem="klQ-Bo-VZt" secondAttribute="bottom" constant="2" id="HXX-vf-9Al"/>
+                                        <constraint firstItem="klQ-Bo-VZt" firstAttribute="top" secondItem="au5-g8-qyG" secondAttribute="top" constant="2" id="TGf-UE-BtY"/>
+                                        <constraint firstItem="9a7-as-qdm" firstAttribute="top" secondItem="klQ-Bo-VZt" secondAttribute="top" id="qKs-po-2og"/>
+                                        <constraint firstItem="9JG-vI-jKQ" firstAttribute="top" secondItem="9a7-as-qdm" secondAttribute="bottom" constant="1" id="ySS-Kq-S51"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="byLabel" destination="9a7-as-qdm" id="rsI-oO-oX1"/>
+                                    <outlet property="dateLabel" destination="9JG-vI-jKQ" id="lQD-pe-6zI"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="imageBlockCell" rowHeight="300" id="kNZ-h0-0BI" customClass="BCHDWImageBlockTableViewCell">
-                                <rect key="frame" x="0.0" y="338.5" width="375" height="300"/>
+                                <rect key="frame" x="0.0" y="376" width="375" height="300"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kNZ-h0-0BI" id="hVq-It-XFp">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
@@ -1026,6 +1067,7 @@
     <resources>
         <image name="gear" width="33" height="33"/>
         <image name="heart-nonselected" width="36" height="36"/>
+        <image name="heart-selected" width="36" height="36"/>
         <image name="image-icon" width="375" height="300"/>
         <image name="lock-icon" width="18" height="18"/>
         <image name="onepassword-login-button" width="41" height="41"/>
